Css Desktop done

--- a/style.css
+++ b/style.css
@@ -19,13 +19,16 @@
 
   body {
     background-color: black;
-    font-family: "Roboto", sans-serif;
     color: aliceblue;
+    font-family: "Roboto", sans-serif;
+    
   }
 }
 
+
+
 header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.411)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.719)),
     url("image_Mqt_2/bg-featured-home.jpg");
   background-position: center;
   background-size: cover;
@@ -44,10 +47,11 @@ header {
     padding-right: 30px;
   }
   p {
+    margin-right: 100px;
     color: white;
     font-size: 40px;
     width: 500px;
-    font-size: 30px;
+    font-weight: 800;
   }
 }
 
@@ -66,7 +70,7 @@ main {
       h2 {
         margin-bottom: 50px;
         background-color: var(--vert-fonce);
-        padding: 10px;
+        padding: 10px 25px;
         font-size: var(--h2-font-size);
       }
       div#listNews {
@@ -87,6 +91,7 @@ main {
           div.description-left {
             padding-right: 60px;
             padding-left: 10px;
+            line-height: 1.3;
             h3 {
               margin-bottom: 15px;
               font-size: var(--h3-font-size);
@@ -94,13 +99,13 @@ main {
             }
             p:first-of-type {
               margin-bottom: 15px;
-              font-size: var(--description-fs);
-              color: var(--vert-clair);
+              font-size: 8px;
+              color: #39978f;
               line-height: 1.5;
             }
             p:nth-child(3) {
               margin-bottom: 15px;
-              font-size: 10px;
+              font-size: var(--description-fs);
               color: var(--vert-clair);
             }
             a {
@@ -118,44 +123,55 @@ main {
       h2 {
         font-size: var(--h2-font-size);
         background-color: var(--vert-fonce);
-        padding: 10px;
+        padding: 10px 25px;
         margin-bottom: 50px;
       }
       article {
         display: flex;
         margin-bottom: 40px;
         img {
-          width: 110px;
-          height: 80px;
+          width: 130px;
+          height: 100px;
           object-fit: cover;
         }
         div.description-right {
           margin-left: 10px;
+          line-height: 1.5;
+          h3{
+            font-size: var(--h3-font-size);
+            margin-bottom:15px ;
+          }
+          p{
+            font-size: var(--description-fs);
+            color: var(--vert-clair);
+            margin-bottom:15px ;
+          }
+          a{
+            font-size: var(--lire-la-suite-fs);
+            color: var(--vert-tres-clair);
+          }
         }
       }
     }
   }
 
   section#infosSection {
-    background-color: blue;
     display: flex;
     justify-content: space-around;
     div#gallery {
-      background-color: rgb(79, 95, 95);
+      background-color: #336264;
       display: flex;
       flex-direction: column;
       width: 60%;
       h2 {
         font-size: var(--h2-font-size);
-        background-color: rgb(130, 197, 255);
-        padding: 10px;
-        margin-bottom: 10px;
+        background-color: var(--vert-fonce);
+        padding: 10px 25px;
       }
       div#listPicture {
-        background-color: #ff0000;
         display: flex;
         justify-content: space-around;
-        padding: 10px;
+        padding: 20px;
         img {
           width: 30%;
           object-fit: cover;
@@ -163,21 +179,20 @@ main {
       }
     }
     div#connectWithUs {
-      background-color: rgb(211, 211, 211);
       display: flex;
       flex-direction: column;
       width: 30%;
       h2 {
         font-size: var(--h2-font-size);
-        background-color: darkorchid;
-        padding: 10px;
+        background-color:var(--vert-fonce);
+        padding: 10px 25px;
       }
       > ul {
-        background-color: rgb(201, 143, 255);
-        padding: 15px;
+        background-color: #336264;
+        padding: 20px;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
         li {
           list-style: none;
           margin: 0px 10px;
@@ -191,7 +206,7 @@ main {
 }
 
 footer {
-  background-color: darkseagreen;
+  background-color: var(--vert-fonce);
   padding: 10px;
   display: flex;
   justify-content: space-between;
