--- a/style.css
+++ b/style.css
@@ -446,14 +446,14 @@
 }
 
 /*MOBILE*/
-@media (max-width: 800px) {
+@media (min-width: 400px) {
   html {
-    font-size: 10px;
+    font-size: 9px;
   }
   header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.719)),
       url("image_Mqt_2/bg-featured-home.jpg");
-    background-position: center;
+    background-position: right;
     background-size: cover;
     height: 550px;
     display: flex;
@@ -633,6 +633,217 @@
   }
 
   footer {
+    background-color: var(--vert-fonce);
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    nav ul {
+      display: flex;
+      flex-direction: row;
+      li {
+        margin: 10px;
+        list-style: none;
+        a {
+          color: white;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+}
+
+
+/*MOBILE -400 widht */
+
+@media (max-width: 400px) {
+  html {
+    font-size: 10px;
+  }
+  header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.719)),
+      url("image_Mqt_2/bg-featured-home.jpg");
+    background-position: right;
+    background-size: cover;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+    > img {
+      padding: 50px;
+      width: 200px;
+    }
+    div {
+      display: flex;
+      justify-content: flex-end;
+      padding-top: 150px;
+      padding-left: 10%;
+      padding-right: 30px;
+    }
+    p {
+      margin-right: 20px;
+      color: white;
+      font-size: 2.2rem;
+      width: 150px;
+      line-height: 1.5;
+      font-weight: 800;
+    }
+  }
+
+  main {
+    padding: 20px 30px;
+    section#newsSection {
+      margin: 10px 0px 50px 0px;
+      background-color: var(--noir);
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+
+      div#lastNews {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        h2 {
+          margin-bottom: 30px;
+          background-color: var(--vert-fonce);
+          padding: 10px 25px;
+          font-size: var(--h2-font-size);
+        }
+        div#listNews {
+          background-color: var(--noir);
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-around;
+
+          article.news {
+            margin-bottom: 20px;
+            width: 44%;
+            display: flex;
+            > img {
+              width: 30px;
+              height: 30px;
+              object-fit: cover;
+            }
+            div.description-left {
+              padding-left: 10px;
+              line-height: 1.3;
+              h3 {
+                margin-bottom: 15px;
+                font-size: var(--h3-font-size);
+                color: white;
+              }
+              p:first-of-type {
+                margin-bottom: 15px;
+                font-size: var(--date-fs);
+                color: #39978f;
+                line-height: 1.5;
+              }
+              p:nth-child(3) {
+                margin-bottom: 15px;
+                font-size: var(--description-fs);
+                color: var(--vert-clair);
+              }
+              a {
+                font-size: var(--lire-la-suite-fs);
+                color: var(--vert-tres-clair);
+              }
+            }
+          }
+        }
+      }
+      div#featuredNews {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        h2 {
+          font-size: var(--h2-font-size);
+          background-color: var(--vert-fonce);
+          padding: 10px 25px;
+          margin-bottom: 25px;
+          margin-top: 20px;
+        }
+        article {
+          display: flex;
+          margin-bottom: 40px;
+          img {
+            width: 130px;
+            height: 100px;
+            object-fit: cover;
+          }
+          div.description-right {
+            margin-left: 10px;
+            line-height: 1.5;
+            h3 {
+              font-size: var(--h3-font-size);
+              margin-bottom: 15px;
+            }
+            p {
+              font-size: var(--description-fs);
+              color: var(--vert-clair);
+              margin-bottom: 15px;
+            }
+            a {
+              font-size: var(--lire-la-suite-fs);
+              color: var(--vert-tres-clair);
+            }
+          }
+        }
+      }
+    }
+
+    section#infosSection {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      div#gallery {
+        background-color: #336264;
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        margin-bottom: 30px;
+        h2 {
+          font-size: var(--h2-font-size);
+          background-color: var(--vert-fonce);
+          padding: 10px 25px;
+        }
+        div#listPicture {
+          display: flex;
+          justify-content: space-around;
+          padding: 20px;
+          img {
+            width: 30%;
+            object-fit: cover;
+          }
+        }
+      }
+      div#connectWithUs {
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        h2 {
+          font-size: var(--h2-font-size);
+          background-color: var(--vert-fonce);
+          padding: 10px 25px;
+        }
+        > ul {
+          background-color: #336264;
+          padding: 20px;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-around;
+          li {
+            list-style: none;
+            margin: 0px 10px;
+            a {
+              color: white;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  footer {
+    font-size: 8px;
     background-color: var(--vert-fonce);
     padding: 10px;
     display: flex;
