--- a/style.css
+++ b/style.css
@@ -56,12 +56,13 @@
       padding-top: var(--padding-top-p);
       padding-left: 20%;
       padding-right: 30px;
+      margin-top: 100px;
     }
     p {
-      margin-right: var(--margin-right-header);
+      margin-right: 50px;
       color: white;
       font-size: 40px;
-      width: var(--width-p-header);
+      width: 40%;
       font-weight: 800;
     }
   }
@@ -240,7 +241,7 @@
 }
 
 /* Tablet*/
-@media (min-width: 800px) {
+@media (min-width: 800px) and (max-width: 1200px) {
   html {
     font-size: 10px;
   }
@@ -446,7 +447,7 @@
 }
 
 /*MOBILE*/
-@media (min-width: 400px) {
+@media (min-width: 400px)and (max-width: 800px) {
   html {
     font-size: 9px;
   }
